✨ Add search by years, change google scholar retrieval function

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 SOFT_LIST_PATH=
 SIM_LIST_PATH=
 OUTPUT_JSON_PATH=
-FROM_SEMANTIC_SCHOLAR=
+
+SERPAPI_API_KEY= # if using Google Scholar
+FROM_SEMANTIC_SCHOLAR= # if "true", then true, else false
 
 STATS_TO_VISUALIZE=
 SAVE_GRAPHS_BASE_FOLDERNAME=
