🍱 Update `.env.example`

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ FROM_SEMANTIC_SCHOLAR= # if "true", then true, else false
 
 STATS_TO_VISUALIZE=
 SAVE_GRAPHS_BASE_FOLDERNAME=
+
+GOOGLE_SCHOLAR_BY_YEARS=
+SEMANTIC_SCHOLAR_BY_YEARS=
+SUPPLEMENTARY_DATA=
